# walrus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: mypy-check.yml  tests.yaml
demo_notebooks/: BC_and_Masking_Deep_Dive.ipynb  NS_Walrus_ZSL.py  NavierStokes_WalrusZSL.ipynb  ShearFlow_Walrus_ZSL.py  demo_navier_stokes_prediction.py  walrus_example_0_ConvertingDataIntoWellFormat.ipynb  walrus_example_1_RunningWalrus.ipynb  walrus_example_1_SyntheticData.ipynb  walrus_example_2_NavierStokesToWell.ipynb  walrus_example_3_NavierStokesInference.ipynb
demo_notebooks/configs/: extended_config.yaml
scripts/: get_one_stats.py
tests/: conftest.py  test_checkpoint.py  test_dataset.py  test_finetune.py  test_import.py  test_jitterer.py  test_trainer.py  test_trainer_linear_model.py  utils.py
walrus/: __init__.py  train.py
walrus/configs/: README.md  config.yaml
walrus/configs/checkpoint/: README.md  defaults.yaml  finetune.yaml  none.yaml
walrus/configs/data/: MHD_64.yaml  README.md  acmaze_only.yaml  acoustic_scattering_discontinuous.yaml  acoustic_scattering_inclusions.yaml  acoustic_scattering_maze.yaml  active_matter.yaml  all_2_3d.yaml  all_2d.yaml  all_3d.yaml  bubbleml_poolboil_subcool.yaml  debug.yaml  pdegym.yaml  (+18 more)
walrus/data/: inflated_dataset.py  mixed_dset_sampler.py  multidatamodule.py  multidataset.py  utils.py  well_to_multi_transformer.py
walrus/models/: __init__.py  baseline_wrappers.py  isotropic_model.py
walrus/optim/: optim_utils.py  schedulers.py
walrus/run_scripts/: README.md  eval_onegpu_example_walrus.sh  finetuning_example_distributed_walrus.sh  pretrain_example_distributed_walrus.sh  run_local_active_matter_dpot.sh  run_local_active_matter_poseidon.sh  run_local_active_matter_walrus.sh
walrus/trainer/: checkpoints.py  normalization_strat.py  training.py
walrus/utils/: distribution_utils.py  experiment_utils.py
(+74 files in other folders)
